--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 </head>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.
 Adding text now.
 And more.</p>
+<p>
+	<b>Another test</b>
+</p>
 </body>
 </html>
